// Original file: node_modules/soum-proto/proto/v2.proto


export interface GetDmUserResponse {
  'id'?: (string);
  'firstName'?: (string);
  'lastName'?: (string);
  'username'?: (string);
  'status'?: (string);
  'email'?: (string);
  'phoneNumber'?: (string);
}

export interface GetDmUserResponse__Output {
  'id': (string);
  'firstName': (string);
  'lastName': (string);
  'username': (string);
  'status': (string);
  'email': (string);
  'phoneNumber': (string);
}
