// Original file: node_modules/soum-proto/proto/v2.proto

export interface GetOrderByIdResponse {
  orderId?: string;
  orderNumber?: string;
  productId?: string;
  sellerId?: string;
  sellerPhoneNumber?: string;
  productName?: string;
  payAmount?: string;
}

export interface GetOrderByIdResponse__Output {
  orderId: string;
  orderNumber: string;
  productId: string;
  sellerId: string;
  sellerPhoneNumber: string;
  productName: string;
  payAmount: string;
}
