// Original file: node_modules/soum-proto/proto/v2.proto


export interface GetSellerBadgeResponse {
  'activateTenDaysGuarantee'?: (boolean);
  'isSFPaid'?: (boolean);
  'hasHighFRate'?: (boolean);
}

export interface GetSellerBadgeResponse__Output {
  'activateTenDaysGuarantee': (boolean);
  'isSFPaid': (boolean);
  'hasHighFRate': (boolean);
}
