// Original file: node_modules/soum-proto/proto/v2.proto


export interface Model {
  'id'?: (string);
  'arName'?: (string);
  'enName'?: (string);
  'modelIcon'?: (string);
}

export interface Model__Output {
  'id': (string);
  'arName': (string);
  'enName': (string);
  'modelIcon': (string);
}
