// Original file: node_modules/soum-proto/proto/v2.proto


export interface Models {
  'totalAvailableProducts'?: (number);
  'modelId'?: (string);
  'modelName'?: (string);
  'modelNameAr'?: (string);
  'modelIcon'?: (string);
}

export interface Models__Output {
  'totalAvailableProducts': (number);
  'modelId': (string);
  'modelName': (string);
  'modelNameAr': (string);
  'modelIcon': (string);
}
