// Original file: node_modules/soum-proto/proto/v2.proto


export interface SMSATracking {
  'id'?: (string);
  'inspectionStatus'?: (string);
  'inspectionCenter'?: (string);
  'trackingNumber'?: (string);
}

export interface SMSATracking__Output {
  'id': (string);
  'inspectionStatus': (string);
  'inspectionCenter': (string);
  'trackingNumber': (string);
}
