// Original file: node_modules/soum-proto/proto/v2.proto


export interface UpdateLogisticServiceRequest {
  'serviceId'?: (string);
  'vendorId'?: (string);
  'dmoId'?: (string);
  'serviceName'?: (string);
}

export interface UpdateLogisticServiceRequest__Output {
  'serviceId': (string);
  'vendorId': (string);
  'dmoId': (string);
  'serviceName': (string);
}
