// Original file: node_modules/soum-proto/proto/v2.proto

export interface updateDmOrderRequest {
  dmOrderId?: string;
  userId?: string;
  userName?: string;
  statusId?: string;
  nctReasonId?: string;
}

export interface updateDmOrderRequest__Output {
  dmOrderId: string;
  userId: string;
  userName: string;
  statusId: string;
  nctReasonId: string;
}
