import type * as grpc from '@grpc/grpc-js';
import type { MessageTypeDefinition } from '@grpc/proto-loader';

import type { V2ServiceClient as _v2_V2ServiceClient, V2ServiceDefinition as _v2_V2ServiceDefinition } from './v2/V2Service';

type SubtypeConstructor<Constructor extends new (...args: any) => any, Subtype> = {
  new(...args: ConstructorParameters<Constructor>): Subtype;
};

export interface ProtoGrpcType {
  v2: {
    Address: MessageTypeDefinition
    Attribute: MessageTypeDefinition
    Bank: MessageTypeDefinition
    Banner: MessageTypeDefinition
    BidProduct: MessageTypeDefinition
    Brand: MessageTypeDefinition
    BreakDownResponse: MessageTypeDefinition
    BuyerOrderDetail: MessageTypeDefinition
    CalculationSettings: MessageTypeDefinition
    CancelOrderRequest: MessageTypeDefinition
    CancelOrderResponse: MessageTypeDefinition
    Category: MessageTypeDefinition
    CheckUserOTPRequest: MessageTypeDefinition
    CheckUserOTPResponse: MessageTypeDefinition
    CommissionAnalysis: MessageTypeDefinition
    CommissionSummaryResponse: MessageTypeDefinition
    Condition: MessageTypeDefinition
    Consignment: MessageTypeDefinition
    CreateNewUserRequest: MessageTypeDefinition
    CreateNewUserResponse: MessageTypeDefinition
    CreateOrderRequest: MessageTypeDefinition
    CreateOrderResponse: MessageTypeDefinition
    CreateSMSATracking: MessageTypeDefinition
    DeviceModel: MessageTypeDefinition
    FeedItem: MessageTypeDefinition
    FeedProduct: MessageTypeDefinition
    FeedProductAttribute: MessageTypeDefinition
    FetchInvoiceGenerationDataRequest: MessageTypeDefinition
    FetchInvoiceGenerationDataResponse: MessageTypeDefinition
    GenerateSmsaTrackingResponse: MessageTypeDefinition
    GetBannersRequest: MessageTypeDefinition
    GetBannersResponse: MessageTypeDefinition
    GetBidSummaryRequest: MessageTypeDefinition
    GetBidSummaryResponse: MessageTypeDefinition
    GetCategoryModelsCountResponse: MessageTypeDefinition
    GetCompletionRateUserRequest: MessageTypeDefinition
    GetCompletionRateUserResponse: MessageTypeDefinition
    GetCountdownValInHoursRequest: MessageTypeDefinition
    GetCountdownValInHoursResponse: MessageTypeDefinition
    GetDmUserRequest: MessageTypeDefinition
    GetDmUserResponse: MessageTypeDefinition
    GetDmUsersRequest: MessageTypeDefinition
    GetDmUsersResponse: MessageTypeDefinition
    GetFeedRequest: MessageTypeDefinition
    GetFeedsResponse: MessageTypeDefinition
    GetInvoiceGenerationFlagRequest: MessageTypeDefinition
    GetInvoiceGenerationFlagResponse: MessageTypeDefinition
    GetLegacyUserViaLocalPhoneRequest: MessageTypeDefinition
    GetLegacyUserViaLocalPhoneResponse: MessageTypeDefinition
    GetListingFeesRequest: MessageTypeDefinition
    GetListingFeesResponse: MessageTypeDefinition
    GetMarketPriceByVariantIdRequest: MessageTypeDefinition
    GetMarketPriceByVariantIdResponse: MessageTypeDefinition
    GetOrderDetailByIdResponse: MessageTypeDefinition
    GetOrderDetailByUserTypeRequest: MessageTypeDefinition
    GetOrderDetailRequest: MessageTypeDefinition
    GetOrderDetailResponse: MessageTypeDefinition
    GetOrderSaleAnalyticsRequest: MessageTypeDefinition
    GetOrderSaleAnalyticsResponse: MessageTypeDefinition
    GetPenalizedOrdersRequest: MessageTypeDefinition
    GetPenalizedOrdersResponse: MessageTypeDefinition
    GetPendingPayoutAnalyticsRequest: MessageTypeDefinition
    GetPendingPayoutAnalyticsResponse: MessageTypeDefinition
    GetPendingPayoutPaginationRequest: MessageTypeDefinition
    GetPendingPayoutPaginationResponse: MessageTypeDefinition
    GetPermissionsRequest: MessageTypeDefinition
    GetPermissionsResponse: MessageTypeDefinition
    GetProductDetailsForPromoCodeValidationRequest: MessageTypeDefinition
    GetProductDetailsForPromoCodeValidationResponse: MessageTypeDefinition
    GetProductForCommissionRequest: MessageTypeDefinition
    GetProductForCommissionResponse: MessageTypeDefinition
    GetProductStatusesRequest: MessageTypeDefinition
    GetProductStatusesResponse: MessageTypeDefinition
    GetProductsForProductServiceResponse: MessageTypeDefinition
    GetProductsRequest: MessageTypeDefinition
    GetProductsResponse: MessageTypeDefinition
    GetPromoCodeRequest: MessageTypeDefinition
    GetPromoCodeResponse: MessageTypeDefinition
    GetRecentlySoldProductsRequest: MessageTypeDefinition
    GetSellerBadgeRequest: MessageTypeDefinition
    GetSellerBadgeResponse: MessageTypeDefinition
    GetTopSellingProductModelsRequest: MessageTypeDefinition
    GetTopSellingProductModelsResponse: MessageTypeDefinition
    GetUserDataRequest: MessageTypeDefinition
    GetUserLastOrderDataResponse: MessageTypeDefinition
    GetUserRequest: MessageTypeDefinition
    GetUserResponse: MessageTypeDefinition
    GetUsersByPhoneRequest: MessageTypeDefinition
    GetUsersByPhoneResponse: MessageTypeDefinition
    GetUsersRequest: MessageTypeDefinition
    GetUsersResponse: MessageTypeDefinition
    GetVariantsRequest: MessageTypeDefinition
    GetVariantsResponse: MessageTypeDefinition
    GetViewedProductsRequest: MessageTypeDefinition
    GetViewedProductsResponse: MessageTypeDefinition
    MigrateCategoryCondition: MessageTypeDefinition
    Model: MessageTypeDefinition
    Models: MessageTypeDefinition
    PaymentOption: MessageTypeDefinition
    Permission: MessageTypeDefinition
    ProcessReserveFinancingPaymentRequest: MessageTypeDefinition
    ProcessReserveFinancingPaymentResponse: MessageTypeDefinition
    Product: MessageTypeDefinition
    ProductForProductService: MessageTypeDefinition
    PromoCode: MessageTypeDefinition
    Request: MessageTypeDefinition
    SMSATracking: MessageTypeDefinition
    SellerOrderDetail: MessageTypeDefinition
    SetUserOTPRequest: MessageTypeDefinition
    SetUserOTPResponse: MessageTypeDefinition
    StatusSummary: MessageTypeDefinition
    SubmitRatingRequest: MessageTypeDefinition
    SubmitRatingResponse: MessageTypeDefinition
    Title: MessageTypeDefinition
    TransactionResponse: MessageTypeDefinition
    UpdateHighestBidRequest: MessageTypeDefinition
    UpdateHighestBidResponse: MessageTypeDefinition
    UpdateInactiveUserRequest: MessageTypeDefinition
    UpdateInactiveUserResponse: MessageTypeDefinition
    UpdateLogisticServiceRequest: MessageTypeDefinition
    UpdateLogisticServiceResponse: MessageTypeDefinition
    UpdateOrderAttributeRequest: MessageTypeDefinition
    UpdateOrderAttributeResponse: MessageTypeDefinition
    UpdatePaymentStatusOfOrderRequest: MessageTypeDefinition
    UpdatePaymentStatusOfOrderResponse: MessageTypeDefinition
    UpdatePenaltyFlagRequest: MessageTypeDefinition
    UpdatePenaltyFlagResponse: MessageTypeDefinition
    UpdateProduct: MessageTypeDefinition
    UpdateProductRequest: MessageTypeDefinition
    UpdateProductResponse: MessageTypeDefinition
    UpdateSecurityFeeRequest: MessageTypeDefinition
    UpdateSecurityFeeResponse: MessageTypeDefinition
    V2Service: SubtypeConstructor<typeof grpc.Client, _v2_V2ServiceClient> & { service: _v2_V2ServiceDefinition }
    ValidIDsForPromoCodeRequest: MessageTypeDefinition
    ValidIDsForPromoCodeResponse: MessageTypeDefinition
    ValidateSellerDetectionNudgeRequest: MessageTypeDefinition
    ValidateSellerDetectionNudgeResponse: MessageTypeDefinition
    ValidateUserUsageOfPromoCodeRequest: MessageTypeDefinition
    ValidateUserUsageOfPromoCodeResponse: MessageTypeDefinition
    Value: MessageTypeDefinition
    Variant: MessageTypeDefinition
  }
}

