// Original file: node_modules/soum-proto/proto/v2.proto


export interface Bank {
  'accountHolderName'?: (string);
  'accountId'?: (string);
  'bankBIC'?: (string);
  'bankName'?: (string);
  'isNonSaudiBank'?: (boolean);
}

export interface Bank__Output {
  'accountHolderName': (string);
  'accountId': (string);
  'bankBIC': (string);
  'bankName': (string);
  'isNonSaudiBank': (boolean);
}
