// Original file: node_modules/soum-proto/proto/v2.proto


export interface Banner {
  'position'?: (number);
  'id'?: (string);
  'bannerName'?: (string);
  'bannerImage'?: (string);
  'bannerPage'?: (string);
  'bannerPosition'?: (string);
  'bannerType'?: (string);
  'bannerValue'?: (string);
  'lang'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}

export interface Banner__Output {
  'position': (number);
  'id': (string);
  'bannerName': (string);
  'bannerImage': (string);
  'bannerPage': (string);
  'bannerPosition': (string);
  'bannerType': (string);
  'bannerValue': (string);
  'lang': (string);
  'createdAt': (string);
  'updatedAt': (string);
}
